# agent-bounties

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  ApiBounty.sol  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  app.py  bounty_creator.sol  bounty_interaction.py  bounty_management_script.py  chatgpt-app-submission.json  check_api_endpoints.py  concierge_playbook.md  config.yaml  docker-compose.production.yml  docker-compose.yml  experiment_plan.md  json_feed.schema.json  llms.txt  notes.md  proof.py  public_research_pool_manager.py  render.yaml  rss.xsd  script.py  skills.sh.json  solution.js  solution.md  team_management.py
.claude-plugin/: marketplace.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.merge-diagnostics/: pr-272-conflicts.txt
.ops-trigger/: pr-272-patch-candidate.txt  pr-272-patch-pr.txt  v4-maintainer-security-fix.txt
bounties/: distribution-tooling-child-bounty.md
contracts/: DistributionToolingBounty.sol
contributor-discovery/: contributor_report_complete.py
crates/api/: Cargo.toml
crates/api/fixtures/: openapi-contract.json
crates/api/src/: main.rs  opportunities.rs
crates/app/: Cargo.toml
crates/app/src/: lib.rs
crates/chain-base/: Cargo.toml
crates/chain-base/src/: agent_wallet_readiness.rs  lib.rs  open_competition.rs  standing_meta_v4.rs
crates/chain-base/tests/: direct_canaries.rs  standing_meta_v2.rs
crates/cli/: Cargo.toml
crates/cli/fixtures/: discovery_answers.json  public-help-contract.json
crates/cli/src/: discovery_report.rs  main.rs
crates/db/: Cargo.toml
crates/db/src/: lib.rs
crates/domain/: Cargo.toml
crates/domain/src/: guild.rs  leaderboard.rs  lib.rs  objective.rs
crates/eval-harness/: Cargo.toml
crates/eval-harness/fixtures/: abuse_cases.json  github_paid_bounty_issue.md  help_requests.json  judge_cases.json  post_value_loops.json
crates/eval-harness/src/: lib.rs
crates/github-app/: Cargo.toml
crates/github-app/fixtures/: github_issue_api_sync_cases.json
crates/github-app/src/: lib.rs
crates/mcp-server/: Cargo.toml
crates/mcp-server/fixtures/: tool-registry.json
crates/mcp-server/src/: chatgpt_app.rs  main.rs
crates/payments-stripe/: Cargo.toml
crates/payments-stripe/src/: lib.rs
crates/service-runtime/: Cargo.toml
crates/service-runtime/src/: lib.rs
crates/verifier-sdk/: Cargo.toml
crates/verifier-sdk/src/: lib.rs
crates/web-public/: Cargo.toml
crates/web-public/src/: lib.rs
crates/worker/: Cargo.toml
crates/worker/src/: lib.rs  main.rs  regression_sandbox.rs
crates/worker/tests/fixtures/regression/benchmark/: expected.txt
crates/worker/tests/fixtures/regression/source-bad/: result.txt
deployments/: base-mainnet-activation.json  base-mainnet-legacy.json  base-mainnet.json  base-sepolia-sponsor-activation.json  bounded-agent-wallet-base-mainnet.json  bounded-wallet-base-activation.json  canonical-child-seeds-base-mainnet.json  canonical-child-verifier-base-mainnet-deployment.json  direct-canaries-base-mainnet.json  leading-zero-work-verifier-base-mainnet.json  standing-meta-v2-base-mainnet.json  standing-meta-v4-config.json
docs/: agent-contribution-starter.md  agent-quickstart.md  agent-starter.md  architecture.md  attribute-shared-proofs-and-bounties-to-new-bount.md  audience-attribution.md  autonomous-loop-guide.md  autonomous-protocol.md  base-sepolia-runbook.md  bounded-agent-wallet.md  bounty-public-contract.md  bounty-templates.md  chatgpt-app-submission.md  claim_control_policy.md  cloud-agent-model-selection.md  cloud-agent-operations.md  competitor-intelligence.md  competitor-learning-plan.md  concierge-playbook.md  contributor-contact-registry.md  contributor-first-maintenance.md  deployment.md  development-methodology.md  discovery-community-map.md  discovery-subscriptions.md  distribution-learning.md  domain-migration-measurement.md  domain-portfolio.md  funding-pending-complete-the-first-permissionless.md  github-dogfooding.md  github-issue-create-comments.md  global-guild-hall.md  hosted-base-usdc-beta-runbook.md  live-money-activation.md  local-delegate-wallet.md  main-branch-ruleset.md  mission-posters.md  objective-coordination.md  open-competition-v1.md  open-source-launch.md  (+27 more)
eval-fixtures/: claim_control_fixtures.json
examples/: github-paid-bounty-issue.md
feeds/: README.md  bounties.json  bounties.rss  manifest.json
migrations/: 0001_core.sql  0002_autonomous_protocol.sql  0003_x402_relayer.sql  0004_agent_coordination.sql  0005_trial_bounties.sql  0006_solver_leaderboard.sql  0007_discovery_subscriptions.sql  0008_opportunity_conversion.sql  0009_legal_acceptances.sql  0010_site_analytics.sql  0011_social_mention_ingestion.sql  0012_competitor_intelligence.sql  0012_site_analytics_context.sql  0012_unfunded_bounty_posters.sql  0013_objective_coordination.sql  checksums.json
ops/: code-size-policy.json  self-healing-policy.json
schemas/: discovery-manifest.v1.json  discovery-manifest.v2.json
scripts/: README_funding_comment_planner.md  activate_routed_v3_dynamic.py  activate_routed_v3_replacements.py  activate_standing_meta_v3_replacements.py  api-postgres.ps1  base_deployment_attest.py  bounded_agent_create.py  bounty_inventory_guard.py  build-indexable-site.py  build_base_attest_fixtures.py  build_base_sepolia_sponsor_bundle.py  build_bounded_agent_wallet_bundle.py  build_bounded_wallet_activation_bundle.py  build_canonical_child_verifier_bundle.py  check-containers.ps1  check-containers.sh  check-migration-history.py  check-postgres.ps1  check-postgres.sh  check-production-compose.ps1  check-production-compose.sh  check-production-smoke.ps1  check-production-smoke.sh  check-render-blueprint.py  check-sdk-live.ps1  check-sdk-live.sh  check-site.py  check-x402-relayer.ps1  check-x402-relayer.sh  check.ps1  check.py  check.sh  check_routed_v3_activation_readiness.py  code_size_report.py  competitor_intelligence.py  demo.ps1  diagnose_hosted_api.py  durable_verifier_router_deploy.py  evaluate_objective_compiler.py  funding_comment_planner.py  (+110 more)
(+368 files in other folders)
