[workspace]
resolver = "2"
members = [
  "crates/domain",
  "crates/app",
  "crates/ledger",
  "crates/risk",
  "crates/bounty-router",
  "crates/verifier-sdk",
  "crates/eval-harness",
  "crates/payments-stripe",
  "crates/payments-x402",
  "crates/chain-base",
  "crates/db",
  "crates/github-app",
  "crates/web-public",
  "crates/api",
  "crates/mcp-server",
  "crates/worker",
  "crates/cli",
]

[workspace.package]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/agent-bounties/agent-bounties"
rust-version = "1.88"

[workspace.dependencies]
alloy = { version = "=1.4.1", default-features = false, features = ["std", "provider-http", "reqwest-rustls-tls", "rpc-types", "signer-local", "sol-types"] }
anyhow = "1"
async-trait = "0.1"
axum = "0.7"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
hex = "0.4"
hmac = "0.12"
proptest = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sha3 = "0.10"
sqlx = { version = "=0.8.6", default-features = false, features = ["runtime-tokio", "tls-rustls-ring-webpki", "postgres", "uuid", "chrono", "json", "macros", "migrate"] }
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
utoipa = { version = "4", features = ["chrono", "uuid"] }
uuid = { version = "1", features = ["v4", "v5", "serde"] }
