[package]
name = "app"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
bounty-router = { path = "../bounty-router" }
chain-base = { path = "../chain-base" }
chrono.workspace = true
domain = { path = "../domain" }
hex.workspace = true
ledger = { path = "../ledger" }
payments-stripe = { path = "../payments-stripe" }
risk = { path = "../risk" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
uuid.workspace = true
verifier-sdk = { path = "../verifier-sdk" }

[dev-dependencies]
tokio.workspace = true
