[package]
name = "chain-base"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
alloy.workspace = true
async-trait.workspace = true
chrono.workspace = true
domain = { path = "../domain" }
hex.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha3.workspace = true
sha2.workspace = true
thiserror.workspace = true
uuid.workspace = true
verifier-sdk = { path = "../verifier-sdk" }

[dev-dependencies]
tokio.workspace = true
