[package]
name = "cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
app = { path = "../app" }
bounty-router = { path = "../bounty-router" }
chain-base = { path = "../chain-base" }
chrono.workspace = true
clap.workspace = true
domain = { path = "../domain" }
eval-harness = { path = "../eval-harness" }
github-app = { path = "../github-app" }
ledger = { path = "../ledger" }
payments-stripe = { path = "../payments-stripe" }
reqwest.workspace = true
risk = { path = "../risk" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true
verifier-sdk = { path = "../verifier-sdk" }
web-public = { path = "../web-public" }

[dev-dependencies]
axum.workspace = true
