[package]
name = "db"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
chain-base = { path = "../chain-base" }
chrono.workspace = true
domain = { path = "../domain" }
hex.workspace = true
ledger = { path = "../ledger" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sqlx.workspace = true
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
alloy.workspace = true
tokio.workspace = true
