[package]
name = "eval-harness"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
bounty-router = { path = "../bounty-router" }
chrono.workspace = true
domain = { path = "../domain" }
github-app = { path = "../github-app" }
risk = { path = "../risk" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
utoipa.workspace = true
uuid.workspace = true
verifier-sdk = { path = "../verifier-sdk" }
