[package]
name = "github-app"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
domain = { path = "../domain" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
hex.workspace = true
uuid.workspace = true
