[package]
name = "mcp-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
app = { path = "../app" }
axum.workspace = true
bounty-router = { path = "../bounty-router" }
chain-base = { path = "../chain-base" }
chrono.workspace = true
db = { path = "../db" }
domain = { path = "../domain" }
eval-harness = { path = "../eval-harness" }
github-app = { path = "../github-app" }
ledger = { path = "../ledger" }
payments-stripe = { path = "../payments-stripe" }
risk = { path = "../risk" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower-http.workspace = true
url.workspace = true
uuid.workspace = true
web-public = { path = "../web-public" }
worker = { path = "../worker" }
