[package]
name = "web-public"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
chrono.workspace = true
domain = { path = "../domain" }
risk = { path = "../risk" }
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
