[package]
name = "worker"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
app = { path = "../app" }
async-trait.workspace = true
chain-base = { path = "../chain-base" }
domain = { path = "../domain" }
ledger = { path = "../ledger" }
serde.workspace = true
tokio.workspace = true
verifier-sdk = { path = "../verifier-sdk" }

[dev-dependencies]
chrono.workspace = true
