[package]
name = "worker"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
app = { path = "../app" }
async-trait.workspace = true
chain-base = { path = "../chain-base" }
chrono.workspace = true
db = { path = "../db" }
domain = { path = "../domain" }
hex.workspace = true
hmac.workspace = true
ledger = { path = "../ledger" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio = { workspace = true, features = ["fs", "io-util", "net", "process"] }
verifier-sdk = { path = "../verifier-sdk" }
web-public = { path = "../web-public" }
uuid.workspace = true

[dev-dependencies]
